--- a/llvm/lib/Analysis/CMakeLists.txt
+++ b/llvm/lib/Analysis/CMakeLists.txt
@@ -185,5 +185,5 @@ find_package(Z3
         CONFIG)
 
 target_include_directories(LLVMAnalysis PRIVATE ${Z3_CXX_INCLUDE_DIRS})
-target_link_libraries(LLVMAnalysis PRIVATE ${Z3_LIBRARIES})
+target_link_libraries(LLVMAnalysis PRIVATE ${Z3_LIBRARIES} cvc5::cvc5 cvc5::cvc5parser)
 target_compile_options(LLVMAnalysis PRIVATE ${Z3_COMPONENT_CXX_FLAGS})
