--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -1356,3 +1356,6 @@ endif()
 if (LLVM_INCLUDE_UTILS AND LLVM_INCLUDE_TOOLS)
   add_subdirectory(utils/llvm-locstats)
 endif()
+
+
+add_subdirectory(scripts)
